v1.3.0 - [add] 支持分布式锁选择是否可重入
       - [enhance] 【升级提示】【重要】@Synchronized的throwExceptionIfNotGetLock值默认由false改为true，获取不到锁时将默认抛出异常
                                      升级时请注意捕获并处理NotGetLockException异常


2023年6月6日
v1.2.7 - [enhance] 设置HiSpeedCacheAspect切面的优先级为1000，RedisSyncAspect优先级为2000，高速缓存的优先级必须高于分布式锁。
                   原因：1) 走缓存时不需要对目标方法加分布式锁；2) 高速缓存刷新时需要加分布式锁；
       - [enhance] 当使用redis作为高速缓存的存储时，将缓存时长设置为超时时间的2倍，而不是最长保留时长continueFetchSecond
       - [add] HiSpeedCache支持通过cacheConditionScript配置是否走缓存
       - [del] 移除fastclone组件，现在jackson的耗时从之前1.5秒降到450ms，fastclone是140ms，从10倍降到3倍，不需要用fastclone了
       - [enhance] 提供自定义clone接口，可以由用户手工实现，性能可以由jackson的450ms降到30ms，比fastclone快4倍

2023年5月25日
v1.2.6 - [enhance] 初始化@Synchronized和@HiSpeedCache后，打印初始化耗时
       - [add] 支持通过HiSpeedContext控制：强制刷新缓存或禁用缓存

2023年4月15日
v1.2.5 - [add] redis分布式锁支持同一个方法注解多个@Synchronized

2022年10月22日
v1.2.4 - [enhance] 优化分布式锁自动续期锁的时间差，减少没必要的续期
       - [add] redis的自增ID增加过期时间的支持

2022年8月29日
v1.2.3 - [add] Json序列化支持LocalDate

2022年8月28日
v1.2.2 - [compatible] 兼容低版本的jedis，支持3.x全系列；支持spring boot 2.2.x - 最新

2022年8月26日
v1.2.1 - [enhance] redis支持设置参数testOnBorrow并默认设置为true，支持设置timeout(默认2秒)/testOnReturn(默认false)
       - [upgrade] maven依赖升级jedis为3.9.0

2022年3月19日
v1.2.0 - [add] 高速缓存本地存储对象支持设置最大存储量，超过后采用LRU策略清理

2022年3月11日
v1.1.7 - [enhance] 当高速缓存的方法有参数，而keyScript为空字符串时，打印warning日志告警

2022年2月14日
v1.1.6 - [enhance] 当使用jdk9及以上的版本时，可能因为illegal-access导致fastclone失败，此时自动降级为json克隆

2022年1月31日
v1.1.5 - [enhance] 使用fastclone提高高速缓存的对象克隆性能，约提高10倍(10万条记录的list由1000毫秒降到140毫秒)

2022年1月9日
v1.1.4 - [enhance] Synchronized注解参数namespace支持默认值，不再需要必填了，不指定时使用全限定类名+方法签名

2021年12月19日
v1.1.3 - [enhance] RedisHelper的compareAndSet使用lua脚本实现

2021年11月18日
v1.1.2 - [enhance] RedisHelper的getObject方法支持嵌套泛型；增加getObjects支持泛型的方法
       - [enhance] HiSpeedCache支持泛型的返回值，新增支持嵌套泛型

2021年11月11日
v1.1.1 - [enhance] 简化RedisHelper的getObject方法为1至多个泛型（原来只支持1和2个泛型）

2021年11月10日
v1.1.0 - [enhance] HiSpeedCache支持泛型的返回值，不需要用户自行设定了；同时默认克隆由false改为true
