@@ -29,7 +29,7 @@ public class WithCacheDemoService {
 
     private AtomicInteger getSomethingWithCache = new AtomicInteger(0);
 
-    @HiSpeedCache(expireSecond = 1, continueFetchSecond = 10, cloneReturn = false)
+    @HiSpeedCache(expireSecond = 1, continueFetchSecond = 10, cloneReturn = false, cacheNullValue = true)
     public String getSomethingWithCache() throws Exception {
         getSomethingWithCache.incrementAndGet();
         Thread.sleep(3000);
@@ -39,7 +39,7 @@ public class WithCacheDemoService {
     }
     
     @HiSpeedCache(expireSecond = 4, continueFetchSecond = 10,
-            useRedis = true, cacheRedisDataMillisecond = 300, cloneReturn = false)
+            useRedis = true, cacheRedisDataMillisecond = 300, cloneReturn = false, cacheNullValue = true)
     public String getSomethingWithCache2() throws Exception {
         SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
         System.out.println("String getSomethingWithCache is start    @ " + df.format(new Date()));
@@ -69,14 +69,14 @@ public class WithCacheDemoService {
 
     /////////////////////////////////////
 
-    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true, keyScript = "args[0]")
+    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true, keyScript = "args[0]", cacheNullValue = true)
     public Date getSomethingWithCacheCloneReturn(String name) throws Exception {
         Thread.sleep(3000);
         return new Date();
     }
 
     @HiSpeedCache(continueFetchSecond = 10, useRedis = true, cacheRedisDataMillisecond = 100,
-      cloneReturn = false) // 测试极端情况下，只缓存1毫秒，qps能达到8万
+      cloneReturn = false, cacheNullValue = true) // 测试极端情况下，只缓存1毫秒，qps能达到8万
     public List<Date> getSomethingWithRedis() throws Exception {
         Thread.sleep(3000);
         List<Date> result = new ArrayList<>();
@@ -87,7 +87,7 @@ public class WithCacheDemoService {
     }
 
     // 支持克隆情况下的泛型
-    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true)
+    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true, cacheNullValue = true)
     public List<Date> getSomeDateWithCache() throws Exception {
         Thread.sleep(3000);
         List<Date> dates = new ArrayList<>();
@@ -98,7 +98,7 @@ public class WithCacheDemoService {
     }
 
     // 支持克隆情况下的泛型
-    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true)
+    @HiSpeedCache(continueFetchSecond = 10, cloneReturn = true, cacheNullValue = true)
     public Map<String, Date> getSomeDateWithCache2() throws Exception {
         Thread.sleep(3000);
         Map<String, Date> map = new HashMap<>();
@@ -109,20 +109,21 @@ public class WithCacheDemoService {
     }
 
     // 用于测试超时时间是否准时
-    @HiSpeedCache(expireSecond = 1, cloneReturn = false)
+    @HiSpeedCache(expireSecond = 1, cloneReturn = false, cacheNullValue = true)
     public String getRandomString() {
         return UUID.randomUUID().toString();
     }
 
     // 有参数，但是keyScript为空，应该打印出log告警
-    @HiSpeedCache(expireSecond = 10, keyScript = "")
+    @HiSpeedCache(expireSecond = 10, keyScript = "", cacheNullValue = true)
     public String withParam(String param) {
         return param;
     }
 
 
     // cacheCondition测试
-    @HiSpeedCache(expireSecond = 10, cacheConditionScript = "'pugwoo'.equals(args[0])", keyScript = "args[0]")
+    @HiSpeedCache(expireSecond = 10, cacheConditionScript = "'pugwoo'.equals(args[0])",
+            keyScript = "args[0]", cacheNullValue = true)
     public String getSomethingWithCacheCondition(String name) throws Exception {
         Thread.sleep(1000);
         return "hello";
